--- a/css/estilos.css
+++ b/css/estilos.css
@@ -102,7 +102,8 @@ body {
 .ui-collapsible-content a{font-weight:normal !important;}
 #infoexamen{overflow:hidden;background:#e7e7e7;}
 #selExamen-listbox .ui-title{background-image:none;height:auto;font-size:18px;padding-top:0px !important;margin-top:0px !important;}
-
+.yo th{background:#5882FA !important;font-weight:bold; color:#fff;text-shadow:none;}
+.yo td{background:#5882FA !important;font-weight:bold; color:#fff;text-shadow:none;}
 
 #fconnect{width:230px;margin-left:auto;margin-right:auto;margin-bottom:30px;background-color:#3c5897 !important;color:#fff;border:none;text-shadow:none;}
 #fconnect span{display:inline-block;vertical-align: middle;font-size:12px;font-weight:normal;}
