--- a/css/estilos.css
+++ b/css/estilos.css
@@ -701,231 +701,7 @@ margin: 1px 0 0 -30px;
   
 }
 @media screen and (-webkit-device-pixel-ratio: 3) and (orientation:portrait) {
-.ui-loader-verbose h1{font-size:36px !important;}
-	.ui-link{
-	font-size:36px;
-}
-.leer{
-	display:block;
-	margin-top:30px;
-}
-	.ui-page-theme-a .ui-checkbox-on:after, html .ui-bar-a .ui-checkbox-on:after, html .ui-body-a .ui-checkbox-on:after, html body .ui-group-theme-a .ui-checkbox-on:after, .ui-btn.ui-checkbox-on.ui-btn-a:after{
-		width:75px;
-		height:75px;
-	}
-	.ui-icon-check:after, html .ui-btn.ui-checkbox-on.ui-checkbox-on:after{
-		background-size:50px 50px;
-	}
-	.ui-btn.ui-checkbox-off:after, .ui-btn.ui-checkbox-on:after, .ui-btn.ui-radio-off:after, .ui-btn.ui-radio-on:after{
-		width:75px !important;
-		height:75px !important;
-	}
-	.ui-btn.ui-checkbox-off:after, .ui-btn.ui-checkbox-on:after, .ui-btn.ui-radio-off:after, .ui-btn.ui-radio-on:after{
-		margin:-37px 20px 0 20px;
-	}
-	.ui-btn-icon-left{
-		padding-left:4.2em;
-	}
-	.ui-btn-corner-all, .ui-btn.ui-corner-all, .ui-slider-track.ui-corner-all, .ui-flipswitch.ui-corner-all, .ui-li-count{
-		border-radius:20px;
-	}
-	div.ui-slider-switch {
-		height: 72px;
-		width: 200px;
-	}
-	.ui-slider-switch .ui-slider-label{
-		font-size: 36px;
-	}
-	.ui-slider-switch .ui-btn.ui-slider-handle {
-margin: 1px 0 0 -54px;
-}
-.ui-slider-track .ui-btn.ui-slider-handle{
-	width:68px;
-	height:68px;
-}
-.ui-btn{
-	font-size:36px;
-}
-.ui-btn-icon-right:after{
-	right:40px;
-}
-.ui-btn-icon-notext:after, .ui-btn-icon-left:after, .ui-btn-icon-right:after{
-	margin-top:-37px;
-}
-.ui-btn-icon-left:after, .ui-btn-icon-right:after, .ui-btn-icon-top:after, .ui-btn-icon-bottom:after, .ui-btn-icon-notext:after{
-	width:75px;height:75px;
-}
-.ui-icon-carat-d:after{
-	background-size:50px 50px;
-}
-.ui-btn-icon-left:after, .ui-btn-icon-right:after, .ui-btn-icon-top:after, .ui-btn-icon-bottom:after, .ui-btn-icon-notext:after{
-	background-size:30px;
-}
-	#footlogo{width:200px;height:auto;}
-	#pruebacss{display:none;}
-	/*PAGE TERMINOS*/
-	#pageterminos h2{
-		font-size:48px;
-		text-align:left;
-		padding-left:50px;
-		padding-right:50px;
-	}
-	#pageterminos p{
-		font-size:36px;
-		text-align:justify;
-		padding-left:50px;
-		padding-right:50px;
-	}
-	/*PAGE LOGIN*/
-	#pageadmin{padding-bottom:0px !important;}
-	#pageadmin .ui-page-theme-a .ui-btn.ui-btn-active{color:#ccc !important;}
-	#email{font-size:48px;}
-	#pass{font-size:48px;}
-	#logoBig{width:900px;}
-	#login{font-size:60px; width:900px; padding:20px 0px 20px 0px !important;text-align:center;margin-bottom:60px;background-color:#034a80 !important;color:#fff;border:none;text-shadow:none;}
-	.registrobtn{font-size:48px; width:800px;background-color:#f4f5f5 !important;padding-top:20px;padding-bottom:20px;border:none;text-shadow:none;color:#333;margin-bottom:0px;margin-left:auto;margin-right:auto;}
-	#fconnect{margin-top:40px; width:840px;margin-bottom:50px;}
-	#fconnect span{font-size:36px;}
-	#fconnect strong{font-size:40px;}
-	#fconnect i{background-image:url(../imagenes/facebook-64.png);width:64px;height:64px;}
-	#pageadmin form {border-top:dashed 4px #ccc; padding-top:50px;}
-	#pageadmin #centro{width: 900px; text-align:center;}
-	#pageadmin .ui-btn-icon-notext:after, #pageadmin .ui-btn-icon-left:after, #pageadmin .ui-btn-icon-right:after{
-	margin-top:-30px;
-	}
-	.ui-loader-verbose {width:25em !important;}
-	#pageadmin .ui-btn-icon-right:after, #pageadmin .ui-btn-icon-top:after, #pageadmin .ui-btn-icon-bottom:after, #pageadmin .ui-btn-icon-notext:after{
-		width:60px;height:60px;
-	}
-	#pageadmin .ui-btn-icon-left:after, #pageadmin .ui-btn-icon-right:after, #pageadmin .ui-btn-icon-top:after, #pageadmin .ui-btn-icon-bottom:after, #pageadmin .ui-btn-icon-notext:after{
-		background-size:30px !important;
-	}
-	#pageadmin .ui-btn-icon-notext:after, #pageadmin .ui-btn-icon-top:after, #pageadmin .ui-btn-icon-bottom:after{margin-left:-28px !important;}
-	#pageadmin .ui-input-text.ui-input-has-clear #pageadmin .ui-btn.ui-input-clear{ margin:-30px 1em 0 !important;}
-
-	/*PAGE REGISTRO*/
-	#pageregistrarse .ui-content{padding-top:0px !important;}
-	#pageregistrarse p {margin-top:0px;padding-top:0px;}
-	#pageregistrarse form{width:90%;margin-left:auto;margin-right:auto;}
-	#pageregistrarse input{font-size:36px;}
-	#pageregistrarse p{font-size:36px;text-align:left;font-weight:bold;}
-	#pageregistrarse label {font-size:36px;text-align:left;margin-top:20px;}
-	#pageregistrarse #registrar{font-size:84px;padding:10px !important;position:relative;width:560px;margin-left:auto;margin-right:auto;margin-bottom:60px;background-color:#034a80 !important;color:#fff;border:none;text-shadow:none;}
-	#pageregistrarse #registrar i{position:absolute;font-size: 84px;top:30px;left:34px;}
-	.volver i{font-size:124px;}
-	.firma{display:inline-block;vertical-align:middle;margin-top:40px !important;font-size:36px;}
-	.firma span{display:inline-block;vertical-align:middle;background-image:url(../imagenes/logoappchoicexxhdpi.png);width:300px;height:66px;}
-
-	/*PAGE MENUPRINCIPAL*/
-	.menuicon{font-size:138px; color:#fff;}
-	.menup a{margin-left:auto;margin-right:auto;background-color:#034a80 !important;padding:60px !important;width:138px !important;border-radius:200px !important;}
-	.menup p{font-size:32px !important; color:#034a80 !important;}
-	#pagemenuppal .ui-grid-a{width:80%;margin-left:auto;margin-right:auto;margin-top:40px;}
-	.ui-bar-a{background:none !important;border:none !important;margin-bottom:40px;}
-	.actualizar{width:80%;margin-right: auto;margin-left: auto}
-	.ui-header{padding-top:0px !important;}
-	.ui-title{width:100%;background-image:url(../imagenes/logochicox3.png);background-size:500px 68px;background-position:center 46px;height:160px;background-repeat: no-repeat;margin:0px auto !important;}
-	#bienvenido{font-size:52px;padding:16px;margin:20px; margin-top:20px;color:#fff;background-color:#ccc;border-radius:10px;}
-	#bienvenido span{display:inline-block; vertical-align: middle;}
-	#bienvenido i{font-size:80px; display:inline-block; vertical-align: middle; margin-right:20px;}
-	.salir{top:24px;right:24px;display:block;}
-	.salir span,.options span{font-size:96px;}
-	.options{top:24px;left:24px;display:block;}
-	.ui-icon-alert:after{background-size:50px;}
-	#pagemenuppal .ui-btn-icon-left{padding-left:0px;}
-
-	/*PANEL LATERAL*/
-	
-	#mypanel{width:280px;}
-	#mypanel{width:280px;background:#fff;height:100%;}
-	#mypanel .nave{font-size:36px;padding-top:40px;}
-	#mypanel .ui-listview{border:none;background:none;box-shadow: none;width:280px !important;margin:0px;padding:0px;}
-	#mypanel .ui-listview a{display:block; margin-left:20px;border:none; background-color:#034a80; padding:40px 50px 40px 50px; width:100px !important; border-radius:120px;margin-bottom:40px;}
-	#mypanel .ui-listview a i{color:#fff; font-size:120px;}
-	#mypanel a.cerrar{padding:20px;background:none;margin-left:40px;}
-	#mypanel a.cerrar span{color:#666;font-size:120px;}
-
-	/*PAGE EXAMENES*/
-	#pageexamenes h2{margin-top:0px;font-size:40px;margin-bottom:40px;}
-	.ui-listview{width:90%;}
-	.ui-listview li a{font-size:40px !important}
-	.ui-icon-carat-r:after{background-size:24px;}
-
-	/*Page Examen*/
-	#infoexamen{width:100%;margin:40px auto 0px auto;}
-	#examen{color:#8b8b8a;background:#e7e7e7;padding:0px 40px 10px 0px;margin:70px 0px 0px 0px;width:100%;}
-	#examen i{font-size:76px;display:inline-block;vertical-align:middle;margin-right:30px;}
-	#examen span{display:inline-block;vertical-align: middle;font-size:44px;}
-	#tiempo i{font-size:80px;display:inline-block;vertical-align: middle;margin-right:20px;}
-	#tiempo span{display:inline-block;vertical-align: middle;}
-	#tiempo{background:#ccc;font-size:80px;color:#fff;padding:0px;border-radius: 8px;width:100%;margin:0px auto 0px auto;position:fixed;left:0px;top:180px;}
-	#respuestas{width:100%;margin:0px auto 60px auto;}
-	#respuestas legend{margin:60px;font-size:44px;}
-	.ui-controlgroup-vertical .ui-controlgroup-controls .ui-btn{border-bottom-width:1px !important}
-	#respuestas .ui-radio{margin-bottom:0px;border-radius:20px !important;}
-	#respuestas .ui-radio label{font-weight:normal !important;font-size:40px;}
-	.ui-radio .ui-btn.ui-radio-on:after{ width: 50px !important;height: 50px !important;border-width: 15px;border-radius: 100px;}
-	/*.ui-page-theme-a .ui-btn{}*/
-	.nextBtn{background:#0a4b81 !important;margin:20px 0px 0px 0px !important;padding:20px 40px !important;border-radius:16px !important;}
-	.nextBtn i{font-size:96px;color:#fff;vertical-align: middle;}
-	.nextBtn span{display:none}
-	.noterror a{margin:20px 0px 0px 0px !important;padding:20px 40px !important;border-radius:16px !important;}
-	.noterror i{font-size:96px;}
-	#pageexamen .ui-footer{margin-bottom:0px !important;padding-bottom:0px !important;}
-	#pageexamen .ui-grid-b{background:#fff !important;margin-bottom:0px !important;padding-bottom:0px !important;}
-	#pageexamen .ui-grid-b .ui-block-a,#pageexamen .ui-grid-b .ui-block-c{width:25% !important}
-	#pageexamen .ui-grid-b .ui-bar{padding:0px !important;}
-	#pageexamen .ui-grid-b .ui-block-b{width:50% !important;}
-	.paginado{color:#666;font-weight:normal;font-size:36px;margin-top:60px;}
-	
-	/*POPUPS*/
-	#popupDialog{width:100%;}
-	#popupUpdate{width:100%;}
-	#popupDialog a i,#popupUpdate a i,#popupPuntaje a i,#popupReporte a i,#popupConfirm a i{display:inline-block;font-size:68px;padding-right:20px;}
-	#popupDialog a span,#popupUpdate a span,#popupPuntaje a span,#popupReporte a span,#popupConfirm a span{display:inline-block;font-size:68px;}
-	#popupPuntaje{width:100%;}
-	#popupReporte{width:100%;}
-	#reporte{height:300px !important;}
-	#popupConfirm{width:100%;}
-	#popupDialog .ui-title,#popupUpdate .ui-title,#popupPuntaje .ui-title,#popupReporte .ui-title,#popupConfirm .ui-title{font-size:64px;}
-	#popupDialog .ui-content,#popupUpdate .ui-content,#popupPuntaje .ui-content,#popupReporte .ui-content,#popupConfirm .ui-content{font-size:36px;}
-
-
-	.ui-grid-b{background:#fff;}
-	/*Page Scores*/
-	#pagescores h2 {font-size:40px;}
-	.ui-collapsible-inset{width:100%;}
-	.ui-collapsible-content .ui-listview{width:100%;}
-	#popupDialog .ui-content,#popupUpdate .ui-content,#popupPuntaje .ui-content,#popupReporte .ui-content,#popupConfirm .ui-content{padding:40px !important;}
-	#pagescores .ui-icon-delete:after{background-size:36px;}
-
-	#pagescores .ui-listview>li.ui-li-has-alt>.ui-btn+.ui-btn{width:150px;}
-	#pagescores .ui-btn-icon-notext:after, .ui-btn-icon-top:after, .ui-btn-icon-bottom:after{margin-left:-37px;}
-	.exportar{margin-right:150px !important;}
-	.borrar{}
-	/*PAGE RANKING*/
-	#pageranking h2{font-size:40px;}
-	#selExamen-listbox .ui-title{font-size:36px;padding:20px;}
-	.contenedor{width:90%;margin:40px auto 0px auto !important;}
-	#pageranking .ui-table th {font-size:36px !important;}
-	#pageranking .ui-controlgroup-vertical .ui-controlgroup-controls .ui-btn{ font-size:36px;}
-	/*PAGE Consultas*/
-	#pageconsultas h2{font-size:40px;}
-	#asunto,#consulta{font-size:48px;}
-	#consulta{margin-top:40px;height:600px !important;}
-	#consultar{width:400px;color:#666;}
-	#consultar i{font-size:64px; display:inline-block;vertical-align: middle;margin-right:20px;}
-	#consultar span{font-size:48px;display: inline-block;vertical-align: middle;}
-	.error{font-size:36px;}
-	.good{font-size:36px;}
-
-	/*PAGE PRERANKING*/
-	#pageprerank h2{margin-top:0px;font-size:40px;margin-bottom:40px;}
-	.ui-listview{width:90%;}
-	.ui-listview li a{font-size:40px !important}
-	#pagescores .ui-icon-carat-r:after{background-size:44px;}
-	.ui-icon-carat-r:after{background-size:24px;}
-	#resRanking td {font-size: 36px;}
+body{zoom:3;}
 
   
 }
